# llm-ocr

./: .env.template  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  MANIFEST.in  README.md  WORKFLOW_DEMO.md  mypy.ini  pyproject.toml  requirements.txt  run_tests.py  workflow_demo.ipynb
ground_truth/: 0a01cda14c9e.xml  0a01cda14c9e_line.txt  0a01cda14c9e_para.txt  0e2a73f13785.xml  0e2a73f13785_line.txt  0e2a73f13785_para.txt  1cd3194257f7.xml  1f2b002cb172.xml  4b78ef0a9f32_line.txt  4b78ef0a9f32_para.txt
llm_ocr/: config.py  model_factory.py  models.py  settings.py  test_metrics.py  workflow.py
llm_ocr/evaluators/: evaluation.py  evaluator.py  test_evaluator.py  test_metrics.py
llm_ocr/evaluators/metrics/: base.py  case_accuracy.py  character_accuracy.py  character_accuracy_without_case.py  error_analysis.py  historic_chars.py  old_char_preservation.py  utils.py  word_accuracy.py  word_analysis.py
llm_ocr/llm/: base.py  claude.py  gemini.py  openai.py  together.py
llm_ocr/pipelines/: base.py  correction.py  ocr.py  test_correction.py
llm_ocr/processors/: alto.py
llm_ocr/prompts/: prompt.py  prompt_builder.py  prompts_config.json
llm_ocr/utils/: image_tool.py
tests/: README.md  __init__.py  conftest.py
tests/integration/: __init__.py  test_basic_workflow.py
tests/mocks/: __init__.py  mock_llm_providers.py
tests/test_fixtures/mock_responses/: claude_responses.json  openai_responses.json
tests/test_fixtures/sample_data/: test_document.txt  test_document.xml
tests/unit/: __init__.py  test_config.py  test_metrics.py  test_models.py
tests/unit/llm/: test_base.py
tests/unit/processors/: test_alto.py
tests/unit/prompts/: test_prompt.py  test_prompt_builder.py
