[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-ocr"
version = "0.1.0"
description = "LLM-powered OCR evaluation and correction package with multi-provider support"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Maria Levchenko", email = "marylevchenko@gmail.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: General",
]
keywords = ["ocr", "llm", "ai", "text-recognition", "evaluation", "correction"]
requires-python = ">=3.8"
dependencies = [
    "pandas>=1.5.0",
    "numpy>=1.21.0",
    "Pillow>=9.0.0",
    "opencv-python>=4.5.0",
    "Levenshtein>=0.26.1",
    "anthropic>=0.20.0",
    "openai>=1.0.0",
    "google-genai>=0.3.0",
    "google-generativeai>=0.8.4",
    "together>=0.2.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/mary-lev/llm-ocr"
Documentation = "https://github.com/mary-lev/llm-ocr#readme"
Repository = "https://github.com/mary-lev/llm-ocr.git"
"Bug Tracker" = "https://github.com/mary-lev/llm-ocr/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["llm_ocr*"]
exclude = ["tests*", "ground_truth*"]

[tool.setuptools.package-data]
llm_ocr = ["*.md"]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--disable-warnings",
    "--cov=llm_ocr",
    "--cov-report=term-missing",
    "--cov-fail-under=10",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests", 
    "performance: Performance tests",
    "slow: Slow running tests",
    "requires_api: Tests that require API keys",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]